Fix spacing issues and add footer

--- a/css/style.css
+++ b/css/style.css
@@ -293,3 +293,11 @@ input::-moz-placeholder textarea::-moz-placeholder { /* Mozilla Firefox 19+ */
 input:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #4d4d4d;
 }
+
+.site-footer {
+	width: 100%;
+	height: 20px;
+	background-color: #fff;
+	padding: 20px;
+	text-align: right;
+}
